# optimize-financial

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  prepared_call_001.local.json  pyproject.toml  signal_candidates.local.json
backend/advisor_signal_extraction_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  constants.py  logging.py  security.py  sentry.py
backend/app/db/: session.py
backend/app/domain/: __init__.py  auth_schema.py  enums.py  pipeline_schema.py  (+4 more)
backend/migrations/: README.md  env.py
backend/scripts/: backfill_transcripts.py  export_results.py  import_agent_artifacts.py  inspect_prepared_transcript.py  run_consolidation_ranking_for_candidates.py  run_evidence_validation_for_ranked.py  run_final_formatting_for_validated.py  run_pipeline_for_transcript.py  run_pipeline_v2_for_transcript.py  run_pipeline_v3_for_transcript.py  run_signal_extraction_for_prepared.py
backend/tests/: conftest.py  test_agent_output_writer.py  test_alembic_migrations.py  test_api_signals.py  test_artifact_import.py  test_chunking.py  test_consolidation_ranking_agent.py  test_deepseek_provider.py  test_evidence_validation_agent.py  test_final_formatting_agent.py  test_llm_usage_read_models.py  test_llm_usage_tracking.py  test_pipeline_orchestrator.py  test_sentry_config.py  test_signal_extraction_agent.py  test_signal_feedback.py  test_signal_validation.py  test_v1_api.py  test_v1_persistence.py  test_worker_pipeline_task.py
(+144 files in other folders)
