[project]
name = "advisor-signal-extraction-backend"
version = "0.1.0"
description = "FastAPI backend and bounded LLM pipeline for advisor signal extraction."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "celery[redis]>=5.3.0",
  "fastapi>=0.111.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sentry-sdk>=2.54.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
